# ftd_django_starter

./: .gitignore  .sample.env  pyproject.toml  readme.md
ftd_auth/: apps.py  tests.py  urls.py
ftd_auth/api/: baseApi.py  userApi.py
ftd_auth/serializers/: userSerializer.py
ftd_auth/templates/: reset-password.html  verify-email.html
project/: settings.py  urls.py
